# filetoast

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  autogen.sh  cmake_install.cmake  configure.ac  createxml.sh
cfg/: filetoast.conf
init/: filetoast-rc  filetoast-systemd
src/: Makefile.am  job.c  job.h  log.c  log.h  main.c  main.h  reverse.c  reverse.h  ssl.c  ssl.h  supervisor.c  supervisor.h  worker.c  worker.h
